--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
    "devDependencies": {
       "@types/node": "^8.10.66",
       "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "typescript": "3.3.3333",
+      "nodemon": "^2.0.15"
    },
    "dependencies": {
+      "cookie-parser": "~1.4.4",
+      "debug": "~2.6.9",
+      "http-errors": "~1.6.3",
+      "jade": "~1.11.0",
+      "morgan": "~1.9.1",
       "@types/express": "^4.17.13",
       "express": "^4.17.2",
       "pg": "^8.7.1",
@@ -15,7 +21,7 @@
       "typeorm": "^0.2.41"
    },
    "scripts": {
-      "start": "node src/index.js",
+      "start": "node src/app.js",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    }
 }
