--- a/package.json
+++ b/package.json
@@ -4,24 +4,25 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/node": "^8.10.66",
+      "nodemon": "^2.0.15",
       "ts-node": "3.3.0",
-      "typescript": "3.3.3333",
-      "nodemon": "^2.0.15"
+      "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/express": "^4.17.13",
       "cookie-parser": "~1.4.4",
+      "cors": "^2.8.5",
       "debug": "~2.6.9",
+      "express": "^4.17.2",
       "http-errors": "~1.6.3",
       "jade": "~1.11.0",
       "morgan": "~1.9.1",
-      "@types/express": "^4.17.13",
-      "express": "^4.17.2",
       "pg": "^8.7.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "^0.2.41"
    },
    "scripts": {
-      "start": "node src/app.js",
+      "start": "node src/app.js",   
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
    }
 }
